fixed jump up sort of, more card formatting, sign up form correctly disappears when new user added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,9 @@ body {
     
 }
 
+#topbar {
+    margin-top:175px;
+}
 footer {
     position: fixed;
     left: 0;
@@ -113,7 +116,7 @@ nav {
     padding: 0;
     line-height: 15px;
     display: inline-block;
-    background-color: rgb(206, 202, 202);
+    /* background-color: rgb(206, 202, 202); */
     /* float: right; */
 }
 .card-text{
@@ -122,7 +125,7 @@ nav {
 }
 .card-title{
     margin-bottom: 5px;
-    font-size: 12px;
+    font-size: 1.25rem;
 
 }
 .card-img, .card-body , .icon {
@@ -158,6 +161,8 @@ nav {
 
   #searchContainer{
       width: 100%;
+      padding-top:100px;
+      
       
   }
   .row{
